Revision history for DBD::Oracle

{{$NEXT}}

  [ENHANCEMENT]

  Add new path to find 64 bit Oracle client on MAC OSX - (GH#20, Martin J. Evans)

  Ignore constraints which are not enabled in primary/foreign key_info
  (GH#23, Martin J. Evans)

1.75_2    2014-11-19

  [ENHANCEMENT]

  Try and set -l when the build would have failed (H.Merijn Brand)

1.75_1    2014-11-17

  [DOCUMENTATION]

  Change mentions of READMEs in Makefile.PL to troubleshooting guides.
  (GH#17, reported by Ken Williams)

  [BUG FIXES]

  Fix GH#15 and GH#21 (the same problem). Previous change for
  RT91698 broke other things in output parameters.

1.74      2014-04-24
  - Promote to stable.

1.73_01   2014-04-23
  - Tweak fix for RT-88185. (GH#14, Martin J. Evans)

1.73_00   2014-04-23
  - Reverts current fix for RT-88185, as it causes breakage. (GH#14)

1.72      2014-04-14
  - promote 1.71_00 to stable.

1.71_00   2014-03-31
    - Recognizes __CYGWIN64__. (RT88709, reported by Witold Petriczek)
    - CHOOSE hint is deprecated. (RT91217, reported by Andy Bucksch,
        fix by Martin J Evans)
    - Set UTF8 flag per-connection. (RT88185, reported by Heinrich Mislik, patch by Martin
      J. Evans)
    - Add a CONTRIBUTING.mkd file. (GH#2)
    - Add SELinux trick. (RT#87003, patch submitted by Mike Doherty)

1.70   2014-02-12
  - promote 1.69_02 to stable.

1.69_02 2014-01-19

    [IMPROVEMENTS]

    - The DSN 'dbi:Oracle:sid=foo' is now an alias for 'dbi:Oracle:foo'.
        (RT#91775, Yanick Champoux, requested by David Wheeler)

    - Support for ORA_SYSBACKUP, ORA_SYSDG and ORA_SYSKM. (RT#91473,
        Kris Lemaire)

    [BUG FIXES]

   - OCI_THREADED setting had been accidentally removed, causing potential
    crashes when using threads. (RT#92229, Martin J. Evans, reported
    by Detlef Lütticke)

  - When using fetch*_hashref the values are decoded but
    not the keys so if you have unicode column names they were not
    returned correctly.  (RT#92134, Martin J. Evans, reported by